@@ -18,6 +18,18 @@ Please send Shepherd bug reports to bug-guix@gnu.org.
 The ‘endpoint’ procedure takes a new ‘#:bind-attempts’ parameter.  Its default
 value is (default-bind-attempts), itself a new SRFI-39 parameter.
 
+** ‘herd restart SERVICE’ starts the replacement, not the original service
+   <https://issues.guix.gnu.org/63717>
+
+In 0.10.0, when a service had received a replacement (for instance via ‘guix
+system reconfigure’), using ‘herd restart’ would invoke the ‘start’ method of
+the original service while installing its replacement in the registry.
+
+This would lead to an inconsistency where the registry would show the new
+service (typically failing to start) while the original service would still be
+running “in the shadows” (responding to SIGCHLD or to incoming connections,
+and so on).
+
 * Changes in 0.10.0
 
 ** Distinguish ‘starting’ and ‘stopping’ intermediate service statuses
